--- a/css/styles.css
+++ b/css/styles.css
@@ -151,42 +151,16 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-.phone {
+.ico-n {
   margin-right: 10px;
-  margin-left: 100px;
 }
 
 .contact-link:hover,
 .contact-link:focus {
   color: var(--accent-color);
 }
-
-.icone-telephone::before {
-  display: inline-block;
-  content: "";
-  width: 10px;
-  height: 15px;
-  margin-right: 10px;
-  background-image: url(../image/smartphone.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-}
-.icone-telephone :hover,
-.icone-telephone :focus {
-  color: var(--accent-color);
-}
-
-.icone-envelope::before {
-  display: inline-block;
-  content: "";
-  width: 16px;
-  height: 11px;
-  margin-right: 10px;
-  background-image: url(../image/envelope.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
+.ico-n:hover {
+  fill: var(--accent-color);
 }
 
 /*Hero*/
@@ -693,5 +667,5 @@ body {
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url(../image/Header.jpg);
+    url(../image/jpg/Header.jpg);
 }
