--- a/css/styles.css
+++ b/css/styles.css
@@ -667,5 +667,5 @@ body {
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url(../image/jpg/Header.jpg);
+    url(../image/Header.jpg);
 }
