--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,9 @@ body {
 .contact-link:focus {
   color: var(--accent-color);
 }
-.ico-n:hover {
+
+.contact-link:hover .ico-n,
+.contact-link:focus .ico-n {
   fill: var(--accent-color);
 }
 
@@ -168,12 +170,11 @@ body {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  width: 696px;
 }
 .hero-title {
   margin-top: 0;
   margin-bottom: 30px;
-  color: var(--title-text-color);
+  color: var(--secondary-text-color);
 
   font-weight: 900;
   font-size: 44px;
@@ -259,6 +260,9 @@ body {
   background-color: #f5f4fa;
   border-radius: 4px;
 }
+.work {
+  display: block;
+}
 
 .work-list {
   display: flex;
@@ -295,17 +299,20 @@ body {
   display: flex;
   text-align: center;
 }
-
-.team-list .item {
+.item-team {
+  background-color: var(--secondary-text-color);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+}
+.team-list .item-team {
   align-items: center;
   width: 270px;
   margin-right: 30px;
-  outline: 1px solid gray;
 }
-.team-list .item:nth-child(4n) {
+.team-list .item-team:nth-child(4n) {
   margin-right: 0;
 }
-.team-list .item:nth-last-child(-n + 4) {
+.team-list .item-team:nth-last-child(-n + 4) {
   margin-bottom: 94px;
 }
 .team-title {
@@ -318,32 +325,39 @@ body {
 /*Section our clients*/
 .client-list {
   display: flex;
+  justify-content: space-between;
   margin-top: 0;
   margin-bottom: 82px;
 }
-.client-list .item {
+.client-list .item-client {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 170px;
   height: 90px;
-  outline: 1px solid grey;
-  margin-right: 30px;
+  border: 1px solid grey;
+  border-radius: 4px;
+
   fill: #afb1b8;
 }
-.client-list .item:nth-child(6n) {
+.client-list .item-client:nth-child(6n) {
   margin-right: 0;
 }
-.client-list .item:nth-last-child(-n + 6) {
+.client-list .item-client:nth-last-child(-n + 6) {
   margin-bottom: 0px;
 }
 .logo-clients {
   fill: #afb1b8;
 }
-.logo-clients:hover {
-  fill: var(--accent-color);
+
+.item-client:hover,
+.item-client:focus {
+  border-color: var(--accent-color);
+  cursor: pointer;
 }
-.client-list .item:hover {
+.item-client:hover .logo-clients,
+.item-client:focus .logo-clients {
+  fill: var(--accent-color);
   cursor: pointer;
 }
 
@@ -543,28 +557,36 @@ body {
   cursor: pointer;
   background-color: var(--accent-color);
 }
-.social-link-card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.card {
   padding: 0;
   margin-bottom: 24px;
   margin-right: 10px;
-  border: none;
+}
+
+.link-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 44px;
   height: 44px;
+  border: none;
   border-radius: 50%;
-  background-color: none;
 }
 .icon-card {
   fill: #afb1b8;
 }
-.icon-card:hover {
+/*.icon-card:hover {
   fill: var(--secondary-text-color);
-}
-.social-link-card:hover {
-  cursor: pointer;
+}**/
+.link-card:hover,
+.link-card:focus {
   background-color: var(--accent-color);
+  cursor: pointer;
+}
+.link-card:hover .icon-card,
+.link-card:focus .icon-card {
+  fill: var(--secondary-text-color);
+  cursor: pointer;
 }
 .main-container-footer {
   display: flex;
@@ -580,6 +602,7 @@ body {
   color: var(--secondary-text-color);
   background-color: var(--accent-color);
 
+  text-decoration: none;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -621,26 +644,33 @@ body {
   display: inline-block;
   border-radius: 4px;
   border: 1px solid transparent;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
   padding: 6px 22px;
   min-width: 29px;
-  color: var(--secondary-text-color);
-  background-color: var(--accent-color);
+  color: var(--primary-text-color);
 
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
 }
+
 .buttton-primary:hover,
 .buttton-primary:focus {
-  color: var(--accent-color);
+  color: var(--secondary-text-color);
+  background-color: var(--accent-color);
+  cursor: pointer;
 }
+
 .buttton-secondary {
   display: inline-block;
   border: 1px solid transparent;
+  border-radius: 4px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
   padding: 6px 22px;
   color: var(--primary-text-color);
-  background-color: var(--secondary-bg-color);
 
   font-weight: 500;
   font-size: 16px;
@@ -649,7 +679,9 @@ body {
 }
 .buttton-secondary:hover,
 .buttton-secondary:focus {
-  color: var(--accent-color);
+  color: var(--secondary-text-color);
+  background-color: var(--accent-color);
+  cursor: pointer;
 }
 .overlay {
   display: flex;
